capstones/administrator/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bowire
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
